client/css/layout.css
:root {
  --scale: 1;
  --roomWidth: 1600px;
  --roomHeight: 1000px;
  --roomTop: calc((calc(var(--vh, 1vh) * 100) - var(--roomHeight) * var(--scale)) / 2 - var(--toolbarSize) / 2);
  --roomLeft: 0px;
  --toolbarSize: 44px;
  --roomColor: #f0f0f0;
  --overlayFontColor: #222326;
  --VTTblue: #1f5ca6;
  --VTTblueDark: #0d2f5e;
  --VTTblueLight: #a9c6e8;
  --wcFont: #ffffff;
  --wcMain: var(--VTTblue);
  --wcBorder: var(--VTTblueDark);
  --wcHighlight: var(--VTTblueLight);
  --wcMainOH: var(--VTTblueDark);
  --wcBorderOH: var(--VTTblue);
  --wcFontOH: var(--wcFont);
  --modalBackgroundColor: var(--roomColor);
  --modalBorderColor: #bcbcbc;
  --modalInputFocusColor: #000eff;
  --positiveInput: #009502;
  --negativeInput: #950000;
  --neutralInput: #1f5ca6;
}

body {
  background: #484848;
  padding: 0;
  margin: 0;
  overflow: hidden;
  font-family: 'Roboto', sans-serif;
}

body.darkMode input {
  --overlayFontColor: #ffffff;
}

body.darkMode input::placeholder {
  color: #ffffff;
}

body.loadingEditMode * {
  cursor: wait;
}

#roomArea {
  position: fixed;
  overflow: clip;
  width: calc(var(--roomWidth) * var(--scale));
  height: calc(var(--roomHeight) * var(--scale));
  top: var(--roomTop);
  left: var(--roomLeft);
  z-index: 1;
}

@media (min-aspect-ratio: 1600/1000) {
  body {
    --roomTop: 0px;
    --roomLeft: calc((100vw - var(--roomWidth) * var(--scale)) / 2 + var(--toolbarSize) / 2);
  }
}

body.aspectTooGood {
  --roomTop: calc((100vh - var(--scale) * var(--roomHeight)) / 2);
  --roomLeft: var(--toolbarSize);
}

body.aspectTooGood.hiddenToolbar {
  --roomLeft: calc((100vw - var(--scale) * var(--roomWidth)) / 2);
}

@media (orientation: portrait) {
  body:not(.lightsOff,.jsonEdit) {
    background-image: linear-gradient(0deg, #484848e8, #484848e8), url(i/branding/logo.svg);
    background-size: calc(100% - 40px) calc(var(--roomTop) - 40px);
    background-repeat: no-repeat;
    background-position: 20px 20px;
    height: 100vh;
  }
  body:not(.lightsOff,.jsonEdit)::after {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;

    bottom: 0;
    height: calc(var(--roomTop) - 40px);
    width: calc(100vw - 40px);

    content: "Please rotate your device to landscape orientation and switch to fullscreen.";
    margin: 20px;
    font-size: 20px;
    color: #fff2;
  }
}


/* toolbar */


  /* main */

    #toolbar {
      display: flex;
      flex-direction: column;
      align-content: center;
      position: fixed;
      box-sizing: border-box;
      z-index: 2;

      top: 0;
      left: calc((100vw - var(--roomWidth) * var(--scale)) / 2 - var(--toolbarSize) / 2 + 1px);
      width: var(--toolbarSize);
      height: 100%;

      --toolbarColor: var(--VTTblue);
      background: var(--toolbarColor);
      padding: 20px 0 10px 0;
    }

    #toolbar > img {
      display: none;
    }

    body.wideToolbar {
      --toolbarSize: 200px;
    }

    body.aspectTooGood #toolbar {
      top: calc((100vh - var(--scale) * var(--roomHeight)) / 2);
      height: calc(var(--scale) * var(--roomHeight));
    }

    body.horizontalToolbar #toolbar {
      flex-direction: row;

      top: calc((var(--vh, 1vh) * 100 - var(--roomHeight) * var(--scale)) / 2 + var(--roomHeight) * var(--scale) - var(--toolbarSize) / 2 - 1px);
      left: 0;
      width: 100%;
      height: var(--toolbarSize);

      padding: 0 10px 0 20px;
    }

    body.aspectTooGood.hiddenToolbar #toolbar {
      display: none;
    }

    body.loading #toolbar, body.loading #toolbar * {
      cursor: not-allowed;
    }

    @media (min-height: 350px) {
      body.wideToolbar #toolbar > img {
        display: block;
        margin: 10px 20px 3px 20px;
        height: 52px;
      }
      body.wideToolbar #toolbar .divider:nth-child(2) {
        display: block;
        margin: 20px 10%;
      }
    }

    @media (max-height: 450px) {
      body.wideToolbar #toolbar .divider:nth-child(2) {
        margin: 10px 10%;
      }
    }

    @media (max-height: 430px) {
      body.wideToolbar #toolbar {
        padding: 0;
      }
      body.wideToolbar #toolbar > img {
        margin: 10px 20px;
      }
    }

    @media (max-height: 415px) {
      body.wideToolbar #toolbar .divider:nth-child(2) {
        display: none;
      }
    }

    @media (max-height: 420px) {
      body:not(.wideToolbar,.horizontalToolbar,.aspectTooGood) #toolbar {
        padding: 0;
      }
    }

    @media (max-width: 760px) {
      body.aspectTooGood #toolbar {
        padding: 0;
      }
    }

    @media (max-width: 530px) {
      body.horizontalToolbar #toolbar {
        padding: 0 5px;
      }
    }

  /* dividers */

    #toolbar .divider {
      border-top: 1px solid #fff8;
      margin: 10px 10%;
    }

    #toolbar .divider:nth-child(2) {
      display: none;
    }

    #toolbar .spacer {
      flex-grow: 1;
    }

    body.horizontalToolbar #toolbar .divider {
      border-left: 1px solid #fff8;
      height: 80%;
      margin: auto 10px;
    }

    @media (max-height: 415px) {
      body.wideToolbar #toolbar .divider {
        display: none;
      }
    }

    @media (max-height: 420px) {
      body:not(.wideToolbar,.horizontalToolbar,.aspectTooGood) #toolbar .divider {
        display: none;
      }
    }

    @media (max-width: 760px) {
      body.aspectTooGood #toolbar .divider {
        display: none;
      }
    }

  /* buttons */

    .toolbarButton {
      display: flex;
      align-items: center;
      justify-content: center;
      margin: 2px;
      background: var(--toolbarColor);
    }

    .toolbarButton::before,
    .ui-button::before,
    .prettyButton::before,
    .prettyButton-icon,
    .symbols {
      font-family: 'VTT-Symbols' !important;

      letter-spacing: 0;
      font-feature-settings: "liga";
      font-variant-ligatures: discretionary-ligatures;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }
/* ... */

